fix: prevent focus overlap in zlistelement

--- a/src/components/list/z-list-element/styles.css
+++ b/src/components/list/z-list-element/styles.css
@@ -58,10 +58,12 @@
 
 :host([expandable]:focus:focus-visible) > .container,
 :host([clickable]:focus:focus-visible) > .container {
+  position: relative;
   box-shadow: var(--shadow-focus-primary);
 }
 
 :host([clickable]:not([expandable])) > .container.clicked {
+  position: relative;
   box-shadow: var(--shadow-focus-primary);
 }
 
